--- a/Sample.Hosted/Pages/Test/Htmx.cshtml
+++ b/Sample.Hosted/Pages/Test/Htmx.cshtml
@@ -9,7 +9,9 @@
 
     ViewData[ViewDataFor.Title] = title;
     ViewData[ViewDataFor.MainContentLayoutOptions] = options;
-    //todo: visualize csrf validation failures
+    //Todo: add a test to disable nonce htmx request only
+    //todo: review onmount registration
+    //todo: request hub in development environment to monitor requests and errors
 }
 <div class="container mt-4">
     <div class="row">
@@ -211,34 +213,48 @@
                         </div>
                     </div>
                 </div>
+
+
+            </div>
+            <div class="mb-5">
+                <h2 class="mb-4">JS Interaction Test</h2>
+                <div class="row g-4">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <button id="btnJqueryTest">jQuery</button>
+                                @*<button id="btnHyperScript" _="on click then add .active to me">Hyperscript</button>*@
+                            </div>
+                            <div class="card-body">
+                                <div id="divJsTestOutput"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
 @section Scripts {
     <script>
-        // HTMX Request Error Handling
-        document.body.addEventListener('htmx:responseError', function(evt) {
-            const response = evt.detail.xhr;
-            const errorMessage = `Request failed with status ${response.status}: ${response.statusText}`;
-            alert(errorMessage);
+        console.log(drnApp.onmount.register);
+        
+        drnApp.onmount.register('#divJsTestOutput', function (options) {
+            $("#divJsTestOutput").text('ready to test');
         });
-
-        // HTMX Request Logging
-        htmx.on("htmx:beforeRequest", function (evt) {
-            console.group("HTMX Request");
-            console.log("URL:", evt.detail.path);
-            console.log("Method:", evt.detail.verb);
-            console.log("Headers:", evt.detail.requestConfig.headers);
-            console.groupEnd();
-        });
-
-        htmx.on("htmx:afterRequest", function (evt) {
-            console.group("HTMX Response");
-            console.log("Status:", evt.detail.xhr.status);
-            console.log("Response:", evt.detail.xhr.responseText);
-            console.groupEnd();
-        });
+        
+        drnApp.onmount.register('#btnJqueryTest',function (options) {
+            console.log("#btnJqueryTest on click registered with" + options.id)
+            $(this).click(function () {
+                $("#divJsTestOutput").text("jQuery works with safe-nonce!");
+            });
+        })
+    </script>
+    <script disable-nonce>
+        onmount('#btnJqueryTest', function (options) {
+            $(this).click(function () {
+                $("#jsTestOutput").text("jQuery works with disable-nonce!");
+            });
+        }, UnregisterOnmountEvents);
     </script>
 } 
