--- a/Sample.Hosted/Pages/Test/Htmx.cshtml
+++ b/Sample.Hosted/Pages/Test/Htmx.cshtml
@@ -16,7 +16,8 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-12">
-            <h1 class="mb-4">HTMX CSRF Token Test Cases</h1>
+            <h1 class="mb-4">HTMX Test Cases</h1>
+            <h2 class="mb-4">CSRF Token Tests</h2>
             <!-- CSRF Enabled Section -->
             <div class="mb-5">
                 <div class="row g-4">
@@ -153,8 +154,8 @@
             </div>
 
             <!-- HTTP Methods Section -->
+            <h2 class="mb-4">Additional HTTP Method Tests</h2>
             <div class="mb-5">
-                <h2 class="mb-4">Additional HTTP Methods</h2>
                 <div class="row g-4">
                     <!-- PUT Request -->
                     <div class="col-md-6">
@@ -217,7 +218,7 @@
 
             </div>
             <div class="mb-5">
-                <h2 class="mb-4">JS Interaction Test</h2>
+                <h2 class="mb-4">JS Interaction Tests</h2>
                 <div class="row g-4">
                     <div class="col-md-6">
                         <div class="card">
@@ -235,26 +236,26 @@
         </div>
     </div>
 </div>
+
 @section Scripts {
     <script>
-        console.log(drnApp.onmount.register);
-        
-        drnApp.onmount.register('#divJsTestOutput', function (options) {
+        drnApp.onmount.register('#divJsTestOutput', function () {
             $("#divJsTestOutput").text('ready to test');
         });
-        
+
         drnApp.onmount.register('#btnJqueryTest',function (options) {
-            console.log("#btnJqueryTest on click registered with" + options.id)
+            console.log("#btnJqueryTest on click registered with " + options.id)
             $(this).click(function () {
                 $("#divJsTestOutput").text("jQuery works with safe-nonce!");
             });
         })
     </script>
+
     <script disable-nonce>
         onmount('#btnJqueryTest', function (options) {
             $(this).click(function () {
                 $("#jsTestOutput").text("jQuery works with disable-nonce!");
             });
-        }, UnregisterOnmountEvents);
+        });
     </script>
 } 
