footer navigation fix

--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -10,7 +10,7 @@
             &copy; @DateTime.Now.Year - @ScopeContext.Settings.ApplicationName
         </div>
         <div id="FooterMiddle">
-            <nav id="footerNavbar" class="d-none align-items-center">
+            <nav id="footerNavbar" class="d-flex align-items-center">
                 <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link py-0" href="#">Privacy</a>
