cdn scripts replaced with local scripts

--- a/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBaseHtmx.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>@ViewData[ViewDataFor.Title] - @ScopeContext.Settings.ApplicationName</title>
 </head>
-<body class="d-flex flex-column bg-secondary-subtle vh-100" hx-boost="true" hx-ext="safe-nonce" hx-history="false">
+<body class="d-flex flex-column bg-secondary-subtle vh-100">
 @RenderBody()
 
 @await RenderSectionAsync("Scripts", required: false)
