--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -21,13 +21,11 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
 
         @*https://icons.getbootstrap.com/#usage*@
         @*todo: bootstrap customizations https://getbootstrap.com/docs/5.3/customize/overview/*@
-        <link defer rel="icon" type="image/x-icon" href="/images/100.jpeg"/>
-        <link defer rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"/>
-        <link defer rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
-              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-              integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="/>
+        <link defer href="/images/100.jpeg" rel="icon" type="image/x-icon"/>
+        <link defer href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
+              integrity="sha512-p8oaNSyWDjK8vlPgMaVcGioPXExZQpNgYw72DVN8jKzqz4SkBfwLSQhKPIcMi4zbxBnYJXmSwRYovsUJBup6NA=="/>
+        <link defer href="~/lib/bootstrap/bootstrap-icons.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
+              integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="/>
         <!-- Custom CSS -->
         <link defer rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks"/>
         <link defer rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks"/>
@@ -36,34 +34,35 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         }
         <link rel="canonical" href="@canonicalUrl"/>
 
-        <script src="~/js/site.js?v=@DateTime.Now.Ticks"></script> @*defines drnApp*@
+        <!-- Preload -->
+        <script src="~/js/site-preload.js?v=@DateTime.Now.Ticks"></script> @*defines drnApp*@
         <script>
                 drnApp.Environment =  @Json.Serialize(ScopeContext.Settings.Environment.ToString());
                 drnApp.isDev = @Json.Serialize(ScopeContext.Settings.IsDevEnvironment);
         </script>
+        <!-- Preload -->
+
+        <script src="~/lib/jquery/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha512-xQM0H6OnF2/RC9jNelcXyPr5cfh/oMFY8tlPzUhK4+1QMfSUFNroM/uAa3NltWmcIdLmVTdvaa2wUrIvb2mCpw=="></script>
+        <script src="~/lib/onmount/onmount.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha512-pOg2kXlBM7AqnCMJ1qXvnsDOcrT/k6o2j9B+L8VRqv+oDdWE2IMk/H5R9PEPDXt/SnvdSlNoauzYfNemwMYuUQ=="></script>
+        <script src="~/lib/htmx/htmx.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>
+        <script src="~/lib/htmx/safe-nonce.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha512-hremVa8ieAr7sB/5KtszjX/8mHDTQ7vNjNgPoMTb1KcNi94Tan8rGa9LkrLjhuAoAg5Z7IS7dT7HhEBaq+jiVA=="></script>
 </head>
 <body class="d-flex flex-column bg-secondary-subtle vh-100" style="overflow: hidden;" hx-boost="true" hx-ext="safe-nonce" hx-history="false">
 @RenderBody()
 
-<script defer crossorigin="anonymous" referrerpolicy="no-referrer"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+<script src="~/lib/jquery/jquery.validate.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+        integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ==" ></script>
+<script src="~/lib/jquery/jquery.validate.unobtrusive.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+        integrity="sha512-Xo4EnjELZKzQYrwlqUOKRmWMl5RWC9jlgKLhx7oO/zVZqHifuuAr+fsXxbiSw++6Z/21cnj4hlcV5crAQKaRFg=="></script>
+<script src="~/lib/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
-<script defer crossorigin="anonymous" referrerpolicy="no-referrer"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="></script>
-<script defer crossorigin="anonymous" referrerpolicy="no-referrer"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.21.0/jquery.validate.min.js"
-        integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ=="></script>
-<script defer crossorigin="anonymous" referrerpolicy="no-referrer"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js"
-        integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog=="></script>
-<script defer crossorigin="anonymous" referrerpolicy="no-referrer"
-        src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.4/dist/htmx.min.js"
-        integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>
-
-<script defer src="~/js/safe-nonce.js"></script>
-<script defer src="~/js/onmount.js"></script>
-<script defer src="~/js/site-postload.js?v=@DateTime.Now.Ticks"></script>
+<!-- Postload -->
+<script src="~/js/site-postload.js?v=@DateTime.Now.Ticks" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Postload -->
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
