event listener options added

--- a/Sample.Hosted/Pages/Shared/_Footer.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Footer.cshtml
@@ -143,5 +143,5 @@
         });
 
         adjustFooterVisibility(@Json.Serialize(showCookieAlertBanner));
-    });
+    }, {once: true});
 </script>
