--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -46,8 +46,10 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
                 integrity="sha512-xQM0H6OnF2/RC9jNelcXyPr5cfh/oMFY8tlPzUhK4+1QMfSUFNroM/uAa3NltWmcIdLmVTdvaa2wUrIvb2mCpw=="></script>
         <script src="~/lib/onmount/onmount.js" crossorigin="anonymous" referrerpolicy="no-referrer"
                 integrity="sha512-pOg2kXlBM7AqnCMJ1qXvnsDOcrT/k6o2j9B+L8VRqv+oDdWE2IMk/H5R9PEPDXt/SnvdSlNoauzYfNemwMYuUQ=="></script>
-        <script src="~/lib/htmx/htmx.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-                integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>
+        @*<script src="~/lib/htmx/htmx.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>*@
+        <script src="~/lib/htmx/htmx1.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha256-RJMXreeIHpSVENthSZHhlcOgmcTHkcJNrOxV+fSipFI="></script>
         <script src="~/lib/htmx/safe-nonce.js" crossorigin="anonymous" referrerpolicy="no-referrer"
                 integrity="sha512-hremVa8ieAr7sB/5KtszjX/8mHDTQ7vNjNgPoMTb1KcNi94Tan8rGa9LkrLjhuAoAg5Z7IS7dT7HhEBaq+jiVA=="></script>
 </head>
