htmx js support refactor part 3 - safe-nonce fix

--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
 
     var statusMessage = TempData[TempDataFor.StatusMessage] as string;
     var layoutOptions = ViewData[ViewDataFor.MainContentLayoutOptions] as MainContentLayoutOptions ?? new MainContentLayoutOptions();
+    //todo: add toolbar
+    //todo: add debug store as an item to action bar
 }
 
 <partial name="_Navbar"/>
