--- a/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
+++ b/Sample.Hosted/Pages/Shared/_LayoutBase.cshtml
@@ -27,8 +27,8 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         <link defer href="~/lib/bootstrap/bootstrap-icons.min.css" rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer"
               integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ=="/>
         <!-- Custom CSS -->
-        <link defer rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks"/>
-        <link defer rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks"/>
+        <link defer href="~/css/site.css?v=@DateTime.Now.Ticks" rel="stylesheet" />
+        <link defer href="~/css/sidebars.css?v=@DateTime.Now.Ticks" rel="stylesheet"/>
         @{
                 var canonicalUrl = Context.Request.Scheme + "://" + Context.Request.Host + Context.Request.Path;
         }
@@ -37,34 +37,34 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
         <!-- Preload -->
         <script src="~/js/site-preload.js?v=@DateTime.Now.Ticks"></script> @*defines drnApp*@
         <script>
-                drnApp.Environment =  @Json.Serialize(ScopeContext.Settings.Environment.ToString());
+                drnApp.environment =  @Json.Serialize(ScopeContext.Settings.Environment.ToString());
                 drnApp.isDev = @Json.Serialize(ScopeContext.Settings.IsDevEnvironment);
         </script>
         <!-- Preload -->
+
+        <script src="~/lib/htmx/htmx.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>
+        <script src="~/lib/htmx/safe-nonce.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+                integrity="sha256-AafNdvaupNArZg74Q8UyjWOx8qUl8LveOPydvESmDjY="></script>
 
         <script src="~/lib/jquery/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
                 integrity="sha512-xQM0H6OnF2/RC9jNelcXyPr5cfh/oMFY8tlPzUhK4+1QMfSUFNroM/uAa3NltWmcIdLmVTdvaa2wUrIvb2mCpw=="></script>
         <script src="~/lib/onmount/onmount.js" crossorigin="anonymous" referrerpolicy="no-referrer"
                 integrity="sha512-pOg2kXlBM7AqnCMJ1qXvnsDOcrT/k6o2j9B+L8VRqv+oDdWE2IMk/H5R9PEPDXt/SnvdSlNoauzYfNemwMYuUQ=="></script>
-        @*<script src="~/lib/htmx/htmx.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-                integrity="sha256-4gndpcgjVHnzFm3vx3UOHbzVpcGAi3eS/C5nM3aPtEc="></script>*@
-        <script src="~/lib/htmx/htmx1.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-                integrity="sha256-RJMXreeIHpSVENthSZHhlcOgmcTHkcJNrOxV+fSipFI="></script>
-        <script src="~/lib/htmx/safe-nonce.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-                integrity="sha512-hremVa8ieAr7sB/5KtszjX/8mHDTQ7vNjNgPoMTb1KcNi94Tan8rGa9LkrLjhuAoAg5Z7IS7dT7HhEBaq+jiVA=="></script>
+
+        <!-- Postload -->
+        <script src="~/js/site-postload.js?v=@DateTime.Now.Ticks" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- Postload -->
 </head>
-<body class="d-flex flex-column bg-secondary-subtle vh-100" style="overflow: hidden;" hx-boost="true" hx-ext="safe-nonce" hx-history="false">
+<body class="d-flex flex-column bg-secondary-subtle vh-100" style="overflow: hidden;" hx-ext="safe-nonce" hx-boost="true" hx-history="false">
 @RenderBody()
 
-<script src="~/lib/jquery/jquery.validate.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-        integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ==" ></script>
-<script src="~/lib/jquery/jquery.validate.unobtrusive.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
-        integrity="sha512-Xo4EnjELZKzQYrwlqUOKRmWMl5RWC9jlgKLhx7oO/zVZqHifuuAr+fsXxbiSw++6Z/21cnj4hlcV5crAQKaRFg=="></script>
-<script src="~/lib/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+<script defer src="~/lib/bootstrap/bootstrap.bundle.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"></script>
-<!-- Postload -->
-<script src="~/js/site-postload.js?v=@DateTime.Now.Ticks" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- Postload -->
+<script defer src="~/lib/jquery/jquery.validate.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+        integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ==" ></script>
+<script defer src="~/lib/jquery/jquery.validate.unobtrusive.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"
+        integrity="sha512-Xo4EnjELZKzQYrwlqUOKRmWMl5RWC9jlgKLhx7oO/zVZqHifuuAr+fsXxbiSw++6Z/21cnj4hlcV5crAQKaRFg=="></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
