--- a/Sample.Hosted/Pages/User/Logout.cshtml
+++ b/Sample.Hosted/Pages/User/Logout.cshtml
@@ -13,7 +13,7 @@
     <p class="text-center">Are you sure you want to log out?</p>
 
     <div class="d-grid gap-2 d-md-flex">
-        <button type="submit" class="btn btn-primary w-50">Log out</button>
-        <a asp-page="@PageFor.Root.Home" class="btn btn-secondary w-50">Cancel</a>
+        <button type="submit" class="btn btn-primary flex-fill">Log out</button>
+        <a asp-page="@PageFor.Root.Home" class="btn btn-secondary flex-fill">Cancel</a>
     </div>
 </form>
