--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -1,9 +1,11 @@
 @using DRN.Framework.Utils.Settings
 @using DRN.Framework.Utils.Scope
+@using DRN.Framework.Hosting.TagHelpers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using NetEscapades.AspNetCore.SecurityHeaders
+@using Sample.Hosted.Settings
 @using Sample.Hosted.Pages
 @using Sample.Hosted.Pages.Shared.Models
-@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Sample.Hosted.Settings
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DRN.Framework.Hosting
 @addTagHelper *, Sample.Hosted
