--- a/Sample.Hosted/Pages/User/Login.cshtml
+++ b/Sample.Hosted/Pages/User/Login.cshtml
@@ -8,17 +8,17 @@
     ViewData[ViewDataFor.MainContentLayoutOptions] = options;
 }
 
-<form method="post">
+<form method="post" class="text-start">
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-floating mb-3">
-        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
+        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com" autocomplete="email"/>
         <label asp-for="Input.Email"></label>
         <span asp-validation-for="Input.Email" class="text-danger"></span>
     </div>
 
     <div class="form-floating mb-3">
-        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
+        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password" autocomplete="current-password webauthn"/>
         <label asp-for="Input.Password"></label>
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
