--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using DRN.Framework.Hosting.TagHelpers
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using NetEscapades.AspNetCore.SecurityHeaders
+@using Sample.Domain.Identity
 @using Sample.Hosted.Settings
 @using Sample.Hosted.Pages
 @using Sample.Hosted.Pages.Shared.Models
