ScopedContect and ScopedUser refactored, Role support added to ScopedUsed

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -22,7 +22,7 @@
                     </li>
                 </environment>
                 <environment include="@AppEnvironment.Development.ToString()">
-                    @if (ScopeContext.User.IsInRole(RoleFor.SystemAdmin))
+                    @if (RoleFor.System.Admin)
                     {
                         <li class="nav-item">
                             <a class="nav-link" authorized-only href="@PageFor.Test.Htmx">Htmx</a>
