--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -3,7 +3,7 @@
 
 @{
     var index = 0;
-    var isSlim = ClaimFor.Profile.SlimUi;
+    var isSlim = ClaimFor.ProfileClaim.SlimUi;
     var iconStyle = isSlim ? string.Empty : "me-2";
     var settingsText = isSlim ? string.Empty : " Settings";
     var settingsTitle = isSlim ? "Settings" : string.Empty;
